added image and changed intro

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             <h1>Joeniño D. Cainday</h1>
             <h2>Computer Science Student</h2>
             <p>
-                Computer Science student with a decade of experience in full stack web development and a passion for automation software. Skilled in various programming languages, with a proven track record of successful projects. Top 20 finalist in the iMake.weMake of research competition. Currently serving as the CS Lead of the Google Developer Student Club USTP. Committed to continued learning and professional growth.
+                Software developer and artificial intelligence enthusiast. Competent in a variety of programming frameworks and languages. Devoted to lifelong learning and professional development.
             </p>    
         </div>
     </div>
